<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_welcome_full"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_marginTop="40dp"
        android:adjustViewBounds="true"
        android:paddingLeft="110dp"
        android:paddingRight="110dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/logo_bio_white_full" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="100dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:text="@string/label_welcome"
                android:textStyle="bold"
                android:textSize="21sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/label_welcome_description"
                android:textSize="16sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btStart"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_background_rounded"
            android:text="@string/label_button_start"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:textSize="16sp"
            />


    </LinearLayout>


</RelativeLayout>