<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageButton
        android:id="@+id/btBackIntro"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_back_intro_svg"
        android:background="@android:color/transparent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="70dp"
            android:gravity="center"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorIntroTitle"
                android:text="@string/label_title_intro"
                android:textStyle="normal"
                android:textSize="20sp"/>
            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_title_intro_cam"/>

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorIntroDescription"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/label_descrption_intro"
            android:textSize="17sp"/>

    </LinearLayout>

    <ImageView
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:src="@drawable/intro_center_image"
        android:adjustViewBounds="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:scaleType="fitCenter"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">


        <Button
            android:id="@+id/btTakeIntro"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_background_rounded"
            android:text="@string/label_button_take"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:textSize="16sp"
            />


    </LinearLayout>


</RelativeLayout>