<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        >

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/ic_liveness_success"
            android:adjustViewBounds="true"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter"
            />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorIntroTitle"
                android:text="@string/label_liveness_success"
                android:textStyle="normal"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="60dp">

            <ImageView
                android:id="@+id/ivClose"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:layout_width="100dp"
                android:layout_height="140dp"
                android:layout_marginEnd="10dp"/>

            <ImageView
                android:id="@+id/ivAfar"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:layout_width="100dp"
                android:layout_height="140dp"
                android:layout_marginStart="10dp"/>

    </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btFeedback"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/button_corners_border"
            android:text="@string/label_give_feedback"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"
            />
        <Button
            android:id="@+id/btExit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/button_background_rounded"
            android:text="@string/label_exit"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="40dp"
            android:textSize="16sp"
            />


    </LinearLayout>


</RelativeLayout>